// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Heading > it works with defaults 1`] = `
<h1
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-heading_d6c5f6 _weight-medium_d6c5f6 _this_1e8633 _size-large_1e8633"
  data-testid="Heading"
>
  Hello world
</h1>
`;

exports[`Heading > it works with families 1`] = `
<h1
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-body_d6c5f6 _weight-medium_d6c5f6 _this_1e8633 _size-large_1e8633"
  data-testid="Heading"
>
  Hello world
</h1>
`;

exports[`Heading > it works with families 2`] = `
<h1
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-heading_d6c5f6 _weight-medium_d6c5f6 _this_1e8633 _size-large_1e8633"
  data-testid="Heading"
>
  Hello world
</h1>
`;

exports[`Heading > it works with families 3`] = `
<h1
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-serif_d6c5f6 _weight-medium_d6c5f6 _this_1e8633 _size-large_1e8633"
  data-testid="Heading"
>
  Hello world
</h1>
`;

exports[`Heading > it works with families 4`] = `
<h1
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-mono_d6c5f6 _weight-medium_d6c5f6 _this_1e8633 _size-large_1e8633"
  data-testid="Heading"
>
  Hello world
</h1>
`;

exports[`Heading > it works with sizes 1`] = `
<h1
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-heading_d6c5f6 _weight-medium_d6c5f6 _this_1e8633 _size-large_1e8633"
  data-testid="Heading"
>
  Hello world
</h1>
`;

exports[`Heading > it works with sizes 2`] = `
<h2
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-heading_d6c5f6 _weight-medium_d6c5f6 _this_1e8633 _size-medium_1e8633"
  data-testid="Heading"
>
  Hello world
</h2>
`;

exports[`Heading > it works with sizes 3`] = `
<h3
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-heading_d6c5f6 _weight-medium_d6c5f6 _this_1e8633 _size-small_1e8633"
  data-testid="Heading"
>
  Hello world
</h3>
`;

exports[`Heading > it works with weights 1`] = `
<h1
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-heading_d6c5f6 _weight-regular_d6c5f6 _this_1e8633 _size-large_1e8633"
  data-testid="Heading"
>
  Hello world
</h1>
`;

exports[`Heading > it works with weights 2`] = `
<h1
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-heading_d6c5f6 _weight-medium_d6c5f6 _this_1e8633 _size-large_1e8633"
  data-testid="Heading"
>
  Hello world
</h1>
`;

exports[`Heading > it works with weights 3`] = `
<h1
  class="_this_d6c5f6 _size-medium_d6c5f6 _family-heading_d6c5f6 _weight-bold_d6c5f6 _this_1e8633 _size-large_1e8633"
  data-testid="Heading"
>
  Hello world
</h1>
`;
